# simplified-git

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gui/: main_gui.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: File.h  Git.h  Repository.h
src/: File.cpp  Git.cpp  Repository.cpp  main_cli.cpp
tests/: CMakeLists.txt  README.md  test_file.cpp  test_helpers.h  test_repository.cpp
tests/testFile/: File_test.cpp
tests/testRepository/: Init_test.cpp  OverwritingFilesFile_test.cpp  Repository_test.cpp
